# advent-of-code-2022

./: .gitignore
day01/: CMakeLists.txt  main.cc
day02/: CMakeLists.txt  main.cc
day03/: CMakeLists.txt  main.cc
day04/: CMakeLists.txt  main.cc
day05/: CMakeLists.txt  main.cc
day06/: CMakeLists.txt
day06/include/: tree.h
day07/: CMakeLists.txt
day07/src/: main.cc  tree.cc
day08/: CMakeLists.txt  main.cc
day09/: CMakeLists.txt  main.cc
day10/: CMakeLists.txt  main.cc
day11/: CMakeLists.txt  main.cc
day12/: CMakeLists.txt  main.cc
template/: CMakeLists.txt  main.cc
